<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:id="@+id/item_intro_image"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/app_name"
        tools:src="@drawable/welcome_one"
        app:layout_constraintBottom_toTopOf="@+id/item_intro_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/item_intro_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/welcome_one"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/item_intro_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        tools:text="@string/welcome_desc_one"
        android:textColor="@color/muted"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/item_intro_title" />




</androidx.constraintlayout.widget.ConstraintLayout>