<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/intro_motion"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layoutDescription="@xml/intro_scene">

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/pager"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/choose_orient_frame"
        android:layout_width="0dp"
        android:layout_height="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/orients"
            android:paddingTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:listitem="@layout/item_material"
            tools:itemCount="4"/>

        <include
            layout="@layout/loading_state"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/choose_orient"
        style="@style/Widget.MaterialComponents.Button.Icon"
        android:layout_width="wrap_content"
        android:layout_height="55dp"
        android:text="@string/choose"
        android:translationY="0dp"
        app:cornerRadius="28dp"
        app:icon="@drawable/ic_car"
        app:iconSize="24dp"
        app:layout_constraintBottom_toTopOf="@+id/intro_back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:visibility="gone" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/intro_back"
        style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="1dp"
        android:text="@string/previous"
        app:icon="?attr/homeAsUpIndicator"
        app:iconGravity="textStart"
        app:iconSize="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/intro_next"
        style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        app:icon="?attr/homeAsUpIndicator"
        app:iconGravity="textStart"
        app:iconSize="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <View
        android:id="@+id/intro_dot_1"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/pager_indicator"
        app:layout_constraintBottom_toBottomOf="@+id/intro_back"
        app:layout_constraintEnd_toStartOf="@+id/intro_dot_2"
        app:layout_constraintTop_toTopOf="@+id/intro_back" />

    <View
        android:id="@+id/intro_dot_2"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:background="@drawable/pager_indicator"
        app:layout_constraintBottom_toBottomOf="@+id/intro_back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/intro_back" />

    <View
        android:id="@+id/intro_dot_3"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:background="@drawable/pager_indicator"
        app:layout_constraintBottom_toBottomOf="@+id/intro_back"
        app:layout_constraintStart_toEndOf="@+id/intro_dot_2"
        app:layout_constraintTop_toTopOf="@+id/intro_back" />

</androidx.constraintlayout.motion.widget.MotionLayout>